iRedMail-1.1:
    * Improvements:
        - tools/backup_*.sh: do not rely on Python to calculate dates.

    * Fixed issues:
        - Backup MX doesn't work.
        - rsyslog config file `/etc/rsyslog.d/1-iredmail-iredapd.conf` doesn't
          work on CentOS.
        - Installer: not disable checks for energid in netdata.
          Port 9998 is used by Amavisd and energid (not installed by iRedMail)
          by default, netdata will try to send http request to this port,
          hence it causes error message in Amavisd log file each time netdata
          starts.
        - Installer: not correctly set Nginx log file path in Fail2ban.
        - Installer: Not set message size limit in Roundcube ($config['max_message_size']).
        - Installer: Not remove `!SSLv2` in Dovecot on Ubuntu 18.04.
          Note: SSLv2 is actually disabled by OpenSSL.

    * Updated packages:
        + Roundcube -> 1.4.2.
        + iRedAdmin -> 1.0
        + iRedAPD -> 3.4.

iRedMail-1.0:
    * Supports new distribution release:
        + OpenBSD 6.6

    * Improvements:
        - Netdata: Replace few Python modules by Go modules to collect data
          for better performance.
        - Disable email notification since netdata is too sensitive and the
          notification message is "useless".

    * Fixed issues:
        - Timeout for clamd service to load virus database is too short on
          CentOS 7.
        - Rejects the new Facebook servers which contain IP address in their
          HELO identities.

    * Updated packages:
        + Roundcube webmail -> 1.4.1
        + iRedAPD -> 3.3
        + iRedAdmin -> 0.9.9
        + netdata -> 1.19.0

iRedMail-1.0-beta2:
    * Removed OpenDMARC integration due to internal bug which caused incorrect
      email rejection. Bug reported to upstream:
      https://github.com/trusteddomainproject/OpenDMARC/issues/50

    * Improvements:
        + tools/backup_*.sh: Remove old empty backup directory.

    * Fixed issues: