@@ -44,7 +44,7 @@ export FAIL2BAN_FILTER_DOVECOT="dovecot.iredmail"
 # Fail2ban logtarget: STDOUT STDERR SYSLOG file.
 # Default log file is /var/log/fail2ban.log.
 export FAIL2BAN_LOGTARGET='SYSLOG'
-export FAIL2BAN_DISABLED_SERVICES="${HTTPD_PORT},${HTTPS_PORT},25,587,465,110,995,143,993,${MANAGESIEVE_PORT}"
+export FAIL2BAN_DISABLED_SERVICES="${PORT_HTTP},${HTTPS_PORT},25,587,465,110,995,143,993,${MANAGESIEVE_PORT}"
 
 # Firewall command (fail2ban/action.d/[NAME].conf)
 if [ X"${KERNEL_NAME}" == X'LINUX' ]; then
