@@ -21,7 +21,7 @@
 #---------------------------------------------------------------------
 
 # web servers and PHP
-export HTTPD_PORT="${HTTPD_PORT:=80}"
+export PORT_HTTP="${PORT_HTTP:=80}"
 export HTTPS_PORT="${HTTPS_PORT:=443}"
 
 # store extra web applications
