@@ -81,6 +81,8 @@ max_allowed_packet = 64M
 # http://dev.mysql.com/doc/refman/5.5/en/innodb-parameters.html#sysvar_innodb_file_per_table
 innodb_file_per_table
 
+range_optimizer_max_mem_size = 0
+
 #ssl-ca =
 #ssl-cert =
 #ssl-key =
